# wigspace-rust

./: .gitignore  Cargo.flexilogger.add  Cargo.toml  README.md  config.yaml  roadmap.md
plugins/: hello.lua  hello.wasm
src/: config.rs  handler_trait.rs  handlers.rs  lib.rs  logging_middleware.rs  main.rs  middleware_chain.rs  middleware_trait.rs  simple_handler.rs
src/modules/: dynamic_loader.rs
src/modules/plugin_example/: Cargo.toml
src/modules/plugin_example/src/: lib.rs
src/modules/rust_plugin_example/: Cargo.toml
src/modules/rust_plugin_example/src/: lib.rs
src/modules/wasm_plugin_example/: hello.wat
tests/: handlers_test.rs  lua_scripting_loader_skeleton_test.rs  middleware_chain_test.rs  plugin_loader_test.rs  rust_dylib_loader_test.rs  rust_plugin_loader_test.rs  scripting_loader_test.rs  wasm_loader_skeleton_test.rs  wasm_loader_test.rs
