[package]
name = "wigspace-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
notify = "6"
tokio = { version = "1", features = ["full"] }
hyper = { version = "1" }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
log = "0.4"
env_logger = "0.10"
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
flexi_logger = "0.31"
chrono = "0.4"
libloading = "0.8.8"
wasmtime = "36.0.2"
anyhow = "1.0.99"
rlua = "0.20.1"

[dev-dependencies]
rlua = "0.20.1"
wasmtime = "36.0.2"
